# meridian-bnpl

./: AUDIT.md  README.md  archi.md  get_bs58.js  id.json  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/bills/pay/: route.ts
app/api/credit/attest/: route.ts
app/api/faucet/: route.ts
app/api/faucet/musdc/: route.ts
app/docs/: page.tsx
app/faucet/: page.tsx
app/limits/: page.tsx
app/merchant/: page.tsx
app/merchants/: page.tsx
app/pay/[hash]/: page.tsx
app/pools/: page.tsx
app/test/: page.tsx
app/transactions/: page.tsx
components/: connect-gate.tsx  convex-client-provider.tsx  footer.tsx  header.tsx  landing-page.tsx  providers.tsx  sidebar-drawer.tsx  wallet-provider.tsx
components/wallet/: connect-wallet-button.tsx
convex/: faucet.ts  merchants.ts  orders.ts  schema.ts  vaults.ts
convex/_generated/: api.d.ts
database/migrations/: 02_developer_console.sql  20260212_merchant_checkout.sql
hooks/: use-polaris.ts
lib/: contracts.ts  meridian-client.ts  tokens.ts  yo-vault.ts
meridian-programs/: Anchor.toml
meridian-programs/programs/bnpl_checkout/: Cargo.toml
meridian-programs/programs/bnpl_checkout/src/: lib.rs
meridian-programs/programs/collateral_vault/: Cargo.toml
meridian-programs/programs/collateral_vault/src/: lib.rs
meridian-programs/programs/credit_engine/: Cargo.toml
meridian-programs/programs/credit_engine/src/: lib.rs
meridian-programs/programs/repayment_tracker/: Cargo.toml
scripts/: auto-sync.js  extract-abis.js  sync_onchain_pools.js  update_db_pools.js
(+1 files in other folders)
